@@ -38,7 +38,6 @@
                   should I build it?</a></li>
             <li><a href="#3_2">Linker bug on Solaris</a></li>
             <li><a href="#3_3">Can I configure/build in the source tree?</a></li>
-            <li><a href="#3_4">My libgcj build fails with "invalid use of undefined type struct sigcontext_struct"</a></li>
           </ol>
         </li>
         <li><a href="#4_0">Gcj Compile/Link Questions</a> 
@@ -330,22 +329,6 @@ $ ../configure [...]
         </dd>
       </dl>
       
-      <hr />
-      <h3><a name="3_4">3.4 My libgcj build fails with "invalid use of undefined type struct sigcontext_struct"</a></h3>
-      <dl> 
-        <dd>
-          <p>If you're using Linux, this probably means you need to upgrade to
-          a newwer, glibc (libc6) based Linux distribution. libgcj does not 
-          support the older linux libc5.</p>
-          <p>It might be possible to get a working libgcj by changing occurrences
-          of "sigcontext_struct" to "sigcontext", however this has not been tested.
-          Even if it works, it is likely that there are other issues with older
-          libc versions that would prevent libgcj from working correctly (threads
-          bugs, for example).</p>
-        </dd>
-      </dl>
-
-
       <h2><a name="4_0">Gcj Compile/Link Questions</a></h2>
  
       <h3><a name="4_1">4.1 Why do I get <tt>undefined reference to `main'</tt> 
