@@ -1,5 +1,10 @@
 2012-10-21  Gerald Pfeifer  <gerald@pfeifer.com>
 
+	* faq.html (My libgcj build fails with "invalid use of undefined
+	type struct sigcontext_struct"): Remove.
+
+2012-10-21  Gerald Pfeifer  <gerald@pfeifer.com>
+
 	* news.html: Replace references to sources.redhat.com by
 	sourceware.org.
 	Avoid a reference to CVS.
